--- a/src/main/resources/templates/package.json
+++ b/src/main/resources/templates/package.json
@@ -15,8 +15,12 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-highcharts": "^16.1.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.1.1"
   },
